src/app/shared/project/project.component.scss
@import "../../variables";

.project {
  .project-title {
    cursor: pointer;
    transition: $transition-fast;

    &:hover {
      color: $accent;
    }
  }

  .project-details {
    transition: $transition-fast;
    height: 0;
    color: $secondary;
    display: none;
    margin-bottom: 25px;

    &.selected {
      height: 100%;
      display: block;
    }

    .technologies-heading {
      text-decoration: underline;
    }

    .project-images {
      margin-top: 20px;

      figure {
        overflow: hidden;
        cursor: pointer;
      }
    }

    .project-links {
      text-align: center;

      a {
        text-decoration: none;
        color: $secondary;
        transition: $transition-fast;

        &:hover {
          color: $accent;
        }
      }
    }

  }
}

